--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: authentication_app
 description: An example app demonstrating the library package, Auth, for Authentication.
 
-version: 1.0.0
+version: 1.3.0
 
 environment:
-  sdk: '>=2.1.0 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -14,8 +14,9 @@ dependencies:
 #    path: ../../../libs/auth070
 #
 #
-  auth: ^4.0.0
-#    path: ../../../libs/auth
+  # https://pub.dev/packages/auth
+  auth: ^6.0.0
+#    path: ../../../packages/auth
 #  auth:
 #    git:
 #      url: git://github.com/AndriousSolutions/auth.git
