--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,7 @@ app.*.symbols
 app.*.map.json
 
 # Android related
-google-services.json
+#google-services.json
 **/android/**/gradle-wrapper.jar
 **/android/.gradle
 **/android/captures/
@@ -94,7 +94,7 @@ google-services.json
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS/XCode related
-GoogleService-Info.plist
+#GoogleService-Info.plist
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
 **/ios/**/*.moved-aside
